--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
   <h1>AO3 Download-bookmarks page</h1>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script src="/ao3downloader.js"></script>
+  <script src="https://omnomnomtea.github.io/ao3-bookmark-downloader/ao3downloader.js"></script>
 </body>
 
 </html>
